# routrs

./: Cargo.toml
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: lib.rs  prelude.rs
core/src/concurrency/: mod.rs
core/src/geograph/: geoloc.rs  json.rs  mod.rs
core/src/highways/: mod.rs
core/src/maritime/: mod.rs
core/src/railways/: mod.rs
core/tests/: geograph.rs  highways.rs  maritime.rs  railways.rs
data/: marnet.json
datasets/highways/: Cargo.toml  README.md
datasets/highways/src/: lib.rs
datasets/maritime/: Cargo.toml  LICENSE  README.md
datasets/maritime/src/: lib.rs
datasets/railways/: Cargo.toml  README.md
examples/: Cargo.toml  README.md
examples/src/: lib.rs  main.rs
examples/tests/: highways.rs  maritime.rs  railways.rs
highways/: Cargo.toml
highways/src/: lib.rs  main.rs
highways/tests/: geograph.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs  prelude.rs
lib/src/concurrency/: mod.rs
lib/src/geograph/: geoloc.rs  mod.rs
lib/src/highways/: mod.rs
lib/src/json/: mod.rs
lib/src/maritime/: mod.rs
lib/src/railways/: mod.rs
maritime/: Cargo.toml
maritime/src/: lib.rs
maritime/tests/: geograph.rs
railways/: Cargo.toml
railways/src/: lib.rs  main.rs
railways/tests/: geograph.rs
routrs/: Cargo.toml
routrs/src/: lib.rs  main.rs  prelude.rs
routrs/src/geograph/: geoloc.rs  mod.rs
routrs/tests/: geograph.rs
routrs_highways/: Cargo.toml
routrs_highways/src/: main.rs
routrs_highways/tests/: geograph.rs
routrs_railways/: Cargo.toml
routrs_railways/src/: main.rs
routrs_railways/tests/: geograph.rs
src/: lib.rs  main.rs
src/geograph/: geoloc.rs  json.rs  mod.rs  node.rs
tests/: geograph.rs  json.rs
