[package]
name = "routrs"
version = "0.1.0"
edition = "2021"
description = "Geograph-based shortest searoute distance calculation for Rust"
license = "MIT"
repository = "https://github.com/deepbludev/routrs"
documentation = "https://github.com/deepbludev/routrs"


[dependencies]
flate2 = "1.0.28"
lazy_static = "1.4.0"
rayon = "1.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
