[package]
name = "routrs_highways_dataset"
version = "0.1.0"
edition = "2021"
description = "Highways dataset for routrs, the geograph-based shortest distance calculator for Rust"
license = "MIT"
repository = "https://github.com/deepbludev/routrs"
documentation = "https://github.com/deepbludev/routrs"

[dependencies]
flate2 = "1.0.28"
lazy_static = "1.4.0"
