[package]
name = "routrs_maritime_dataset"
version = "0.1.0"
edition = "2021"
description = "Maritime dataset for routrs, the geograph-based shortest distance calculator for Rust"
license = "MIT"
repository = "https://github.com/deepbludev/routrs"
keywords = ["pathfinding", "routing"]
categories = ["algorithms", "science::geo"]

[dependencies]
flate2 = "1.0.28"
lazy_static = "1.4.0"
